# catapult

./: .gitattributes  .gitignore  .makerc  .makerc-vars  .makerc-vars.example  .prettierrc  .yarnrc.yml  Dockerfile  Makefile  README.md  ansible-lint.yml  ansible.cfg  ansible1.cfg  autocomplete.zsh  install.sh  package.json  version.yml
.github/: CONTRIBUTING.md
.github/workflows/: catapult-docs.yml  docker-image-staging.yml  docker-image.yml  docker-image_main.yml  docker-image_staging.yml  release.yml  version.yml  version_check.yml  version_staging.yml
container/: docker-entrypoint.sh
container/home/builder/: .default_aliases  .zshrc  keepass-decrypt-check.py  keepass-unlocker.sh  kpsock.py
container/home/builder/.vault/: unlock-vault.sh  yamllint-config.yml
defaults/: autocomplete.yml  docker-compose-ara.yml  docker-compose-bridge.yml  docker-compose-custom.yml  docker-compose-extra.yml  docker-compose-host.yml  docker-compose-network.yml  docker-compose-personal.yml  docker-compose.yml  pyproject.toml  requirements.txt  requirements.yml  requirements_cs.yml  requirements_custom.yml  requirements_nova.yml  requirements_src.txt  start.yml  vault_example.yml
docker/: docker-compose.yml
docs/: 00-overview.md  01-getting-started.md  01-installation.md  02-how-to-use.md  03-how-to-customize.md  03-template-requirements.md  04-template-requirements.md  20-how-to-use.md  30-how-to-personalize.md  40-how-to-customize.md  50-template-requirements.md  90-set-up-keepass.md  91-generate-ssh-keypair.md  92-contributing.md  how-to-use.md  installation.md
inventories/_TEMPLATE_PROJECT/: .gitignore  .prettierrc  inventory.ini  inventory.yml
inventories/_TEMPLATE_PROJECT/group_vars/: _project_vars.yml  all.yml  zone_aws.yml  zone_linode.yml  zone_vmware_workstation.yml
inventories/_TEMPLATE_PROJECT/group_vars/all/: all.yml
inventories/_TEMPLATE_PROJECT/host_vars/: vm1.yml
inventories/_TEMPLATE_PROJECT/roles/post_vm_role/tasks/: main.yml
inventories/_TEMPLATE_PROJECT/vm/vm1/tasks/: main.yml
inventories/_operating_systems/: os.ini
inventories/_operating_systems/group_vars/: os_almalinux_10.yml  os_almalinux_9.yml  os_alpine.yml  os_archlinux.yml  os_bsd.yml  os_debian.yml  os_debian_11.yml  os_debian_12.yml  os_debian_13.yml  os_esxi.yml  os_esxi_8.yml  os_fedora_server.yml  os_fedora_workstation.yml  os_fortigate.yml  os_fortios.yml  os_freebsd_13.yml  os_freebsd_14.yml  os_freebsd_15.yml  os_kali.yml  os_kali_2022_4.yml  os_kali_2023_1.yml  os_kali_2023_2.yml  os_kali_2023_3.yml  os_kali_2023_4.yml  os_kali_2024_1.yml  os_kali_2024_2.yml  os_kali_2024_3.yml  os_kali_2024_4.yml  os_kali_2025_1.yml  os_kali_latest.yml  os_linux.yml  os_macos.yml  os_macos_11_7_bigsur.yml  os_macos_12_6_monterey.yml  os_macos_13_0_ventura.yml  os_macos_14_1_1_sonoma.yml  os_macos_sonoma.yml  os_manjaro_gnome.yml  os_manjaro_gnome_22.yml  os_network_devices.yml  (+64 more)
inventories/group_vars/: os_arch.yml  os_debian.yml  os_debian_12.yml  os_kali.yml  os_kali_latest.yml  os_linux.yml  os_macos.yml  os_macos_13_0_ventura.yml  os_manjaro_gnome.yml  os_manjaro_gnome_22.yml  os_network_devices.yml  os_router_os_6.yml  os_router_os_7.yml  os_ubuntu.yml  os_ubuntu_20_04.yml  os_ubuntu_22_04.yml  os_ubuntu_desktop_20_04.yml  os_vyos_1_4.yml  os_windows.yml  os_windows_10_2004.yml  os_windows_10_21h1.yml  os_windows_10_21h2.yml  os_windows_8_1.yml  os_windows_server_2016_core.yml  os_windows_server_2016_gui.yml  os_windows_server_2019_gui.yml  os_windows_server_2022_core.yml  os_windows_server_2022_gui.yml
scripts/entrypoints/: 01-first-run-check.sh  01-initialization.sh  02-clarified-core-version-check.sh  02-nova-core-version-check.sh  03-clarified-core-version-check.sh  03-deploy-webhooks.sh  03-enable-webhooks.sh  99-select-inventory.sh
scripts/entrypoints/every-run/: 01-enable-webhooks.sh  02-enable-ara.sh
scripts/entrypoints/first-run/: 01-initialization.sh  02-nova-core-version-check.sh
scripts/general/: autocomplete_generator.py  build.sh  catapult-customizer.sh  cd_command_generator.py  check-connectivity.sh  checks.sh  cleanup.sh  colors.sh  configure-docker.sh  configure-keepassxc.sh  connect.sh  connectivity-checks.sh  docker-entrypoint.sh  docker-login.sh  example.sync-to-shared-roles.sh  file-permissions.sh  generate-inventory-completion.sh  install-all-requirements.sh  install-collections.sh  install-docker-image-collections.sh  install-docker-image-python.sh  install-docker-image-tools.sh  install-docker-image.sh  install-requirements.sh  prepare.sh  run.sh  secrets-change-password.sh  secrets-edit.sh  secrets-initialize.sh  secrets-unlock.sh  secrets-validate.sh  select-inventory.sh  start-tasks-loader.sh  start.sh  update-catapult.sh  update-venv.sh
scripts/start-tasks/: 01-preparation.sh  02-docker-image-check.sh  02-docker-mtu-fix.sh  02-enable-ssh-on-host.sh  03-enable-ssh-on-host.sh  04-docker-image-update.sh
