[project]
name = "catapult-venv"
version = "1.0.0"
description = "This a Python virtual environment for Catapult"
requires-python = ">=3.12"
dependencies = [
    "aiohttp",
    "ansible-core==2.18.9",
    "ansible-lint",
    "ansible-pylibssh",
    "ansible-specdoc",
    "azure-cli-core",
    "azure-common",
    "azure-containerregistry",
    "azure-core",
    "azure-identity",
    "azure-keyvault",
    "azure-mgmt-apimanagement",
    "azure-mgmt-authorization",
    "azure-mgmt-automation",
    "azure-mgmt-mysqlflexibleservers",
    "azure-mgmt-batch",
    "azure-mgmt-cdn",
    "azure-mgmt-compute==33.0.0", # https://github.com/ansible-collections/azure/blob/dev/requirements.txt#L11
    "azure-mgmt-containerinstance",
    "azure-mgmt-containerregistry",
    "azure-mgmt-containerservice",
    "azure-mgmt-core",
    "azure-mgmt-cosmosdb",
    "azure-mgmt-datafactory",
    "azure-mgmt-datalake-store",
    "azure-mgmt-devtestlabs",
    "azure-mgmt-dns",
    "azure-mgmt-eventhub",
    "azure-mgmt-hdinsight",
    "azure-mgmt-iothub",
    "azure-mgmt-keyvault",
    "azure-mgmt-loganalytics",
    "azure-mgmt-managedservices",
    "azure-mgmt-managementgroups",
    "azure-mgmt-marketplaceordering",
    "azure-mgmt-monitor",
    "azure-mgmt-network",
    "azure-mgmt-notificationhubs",
    "azure-mgmt-nspkg",
    "azure-mgmt-postgresqlflexibleservers",
    "azure-mgmt-privatedns",
    "azure-mgmt-rdbms",
    "azure-mgmt-recoveryservices",
    "azure-mgmt-recoveryservicesbackup",
    "azure-mgmt-redis",
    "azure-mgmt-resource",
    "azure-mgmt-resourcehealth",
    "azure-mgmt-search",
    "azure-mgmt-servicebus",
    "azure-mgmt-sql",
    "azure-mgmt-storage==21.2.1", # https://github.com/ansible-collections/azure/blob/dev/requirements.txt#L35
    "azure-mgmt-trafficmanager",
    "azure-mgmt-web",
    "azure-nspkg",
    "azure-storage-blob",
    "boto3",
    "botocore",
    "cryptography",
    "dnspython",
    "dpath",
    "hvac",
    "jinja2",
    "jmespath",
    "kubernetes",
    "linode-api4",
    "lxml",
    "msgraph-sdk",
    "netaddr",
    "oauthlib",
    "openstacksdk",
    "oras",
    "packaging",
    "pan-os-python",
    "pan-python",
    "pandevice",
    "panos-upgrade-assurance",
    "paramiko",
    "passlib",
    "polling",
    "prettytable",
    "proxmoxer",
    "psycopg2-binary",
    "pyopenssl",
    "pyvmomi",
    "pywinrm",
    "redis",
    "requests-credssp",
    "requests-oauthlib",
    "requests",
    "scp",
    "setuptools",
    "vmware-vcenter",
    "xmltodict",
    "yq"
]
