[project]
name = "catapult-venv"
version = "1.0.0"
description = "This a Python virtual environment for Catapult"
requires-python = "==3.12.12"
dependencies = [
    "aiohttp",
    "ansible-core==2.19.7",
    "ansible-lint",
    "ansible-pylibssh",
    "ansible-specdoc",
    "ara",
    "azure-cli-core",
    "azure-common",
    "azure-containerregistry",
    "azure-core",
    "azure-identity",
    "azure-keyvault",
    "azure-mgmt-apimanagement",
    "azure-mgmt-authorization",
    "azure-mgmt-automation",
    "azure-mgmt-mysqlflexibleservers",
    "azure-mgmt-batch",
    "azure-mgmt-cdn",
    "azure-mgmt-compute==33.0.0", # https://github.com/ansible-collections/azure/blob/dev/requirements.txt
    "azure-mgmt-containerinstance",
    "azure-mgmt-containerregistry",
    "azure-mgmt-containerservice",
    "azure-mgmt-core",
    "azure-mgmt-cosmosdb",
    "azure-mgmt-datafactory",
    "azure-mgmt-datalake-store",
    "azure-mgmt-devtestlabs",
    "azure-mgmt-dns",
    "azure-mgmt-eventhub",
    "azure-mgmt-hdinsight",
    "azure-mgmt-iothub",
    "azure-mgmt-keyvault",
    "azure-mgmt-loganalytics",
    "azure-mgmt-managedservices",
    "azure-mgmt-managementgroups",
    "azure-mgmt-marketplaceordering",
    "azure-mgmt-monitor",
    "azure-mgmt-network",
    "azure-mgmt-notificationhubs",
    "azure-mgmt-nspkg",
    "azure-mgmt-postgresqlflexibleservers",
    "azure-mgmt-privatedns",
    "azure-mgmt-rdbms",
    "azure-mgmt-recoveryservices",
    "azure-mgmt-recoveryservicesbackup",
    "azure-mgmt-redis",
    "azure-mgmt-resource==23.2.0", # https://github.com/ansible-collections/azure/blob/dev/requirements.txt#L46
    "azure-mgmt-resourcehealth",
    "azure-mgmt-search",
    "azure-mgmt-servicebus",
    "azure-mgmt-sql",
    "azure-mgmt-storage",
    "azure-mgmt-trafficmanager",
    "azure-mgmt-web",
    "azure-nspkg",
    "azure-storage-blob",
    "boto3",
    "bcrypt==4.3.0", # https://foss.heptapod.net/python-libs/passlib/-/issues/196
    "botocore",
    "cryptography",
    "dnspython",
    "dpath",
    "hvac",
    "jinja2",
    "jmespath",
    "kubernetes",
    "linode-api4",
    "lxml",
    "msgraph-sdk",
    "netaddr",
    "oauthlib",
    "openstacksdk",
    "oras",
    "packaging",
    "pan-os-python",
    "pan-python",
    "pandevice",
    "panos-upgrade-assurance",
    "paramiko",
    "passlib",
    "polling",
    "prettytable",
    "proxmoxer",
    "psycopg2-binary",
    "pyopenssl",
    "pyvmomi",
    "pywinrm",
    "redis",
    "requests-credssp",
    "requests-oauthlib",
    "requests",
    "scp",
    "setuptools==81.0.0", # Later versions of setuptools will break vSphere library installation
    "vmware-vcenter",
    "xmltodict",
    "yq"
]
